# cpp_crossplatform_libs_pybind

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  dynamic_link_test.cpp  my_plugin_test.cpp  my_plugin_test.hpp
apps/python/: testing.ipynb
dl_loader/: dl_loader  library_names.hpp
dl_loader/linux/: DLLoader.hpp
libraries/: CMakeLists.txt
libraries/operations/: CMakeLists.txt  operations
libraries/operations/includes/: operations.hpp
libraries/operations/src/: operations.cpp
libraries/plugin/: CMakeLists.txt  my_plugin
libraries/plugin/includes/: my_plugin.hpp
libraries/plugin/src/: my_plugin.cpp
libraries/python_interface/: CMakeLists.txt  python_interface
libraries/python_interface/src/: my_python_package.cpp  operations.cpp  structure.cpp
libraries/structure/: CMakeLists.txt  structure
libraries/structure/includes/: structure.hpp
libraries/structure/src/: structure.cpp
